# milo-dex

./: Cargo.toml  README.md  pools.json  proxy-server.js  start-all.sh
contracts/milo-pool/: DEPOSIT.masm  WITHDRAW.masm
faucet-server/: Cargo.toml
faucet-server/src/: faucet_ids.rs  main.rs
frontend/: package.json
frontend/public/: export-swap-notes.html
frontend/public/contracts/milo-pool/: SWAP.masm
frontend/src/: App.css  App.tsx  faucetClient.ts  main.tsx  poolConfig.json  poolConfig.ts  tokenRegistry.ts  vite-env.d.ts
frontend/src/components/: AppWalletManager.css  AppWalletManager.tsx
frontend/src/config/: api.ts  poolConfig.ts
frontend/src/hooks/: useLiquidity.tsx  useP2IDSwap.tsx  usePoolStats.tsx  useRemoveLiquidity.tsx  useSwap.tsx
frontend/src/lib/: AppWallet.ts  P2IDDeposit.ts  P2IDSwap.ts  SwapNote.ts  crypto.ts  decryptMidenWallet.ts  exportToMidenWallet.ts
frontend/src/pages/: Faucet.tsx  Home.tsx  Pools.tsx  Portfolio.tsx  Trade.tsx
frontend/src/utils/: lpCalculator.ts
integration/: Cargo.toml  accounts.json
integration/src/: helpers.rs  lib.rs  milo_accounts.rs
pool-daemon/: Cargo.toml  README.md
public/contracts/milo-pool/: DEPOSIT.masm  SWAP.masm  milo-pool.masm
public/contracts/milo-pool/v012/: milo-pool-v012.masm
