[package]
name = "milo-faucet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
miden = { workspace = true }
miden-client = { version = "0.12", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "0.12", package = "miden-client-sqlite-store" }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-lib = { version = "0.12", default-features = false }
tokio = { version = "1", features = ["full"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
